crates/wac-parser/tests/resolution/fail/mismatched-func-params/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (param "x" u32)))
  )
)
